--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "JavaScript-Template",
+  "name": "giphy-search",
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
@@ -11,7 +11,9 @@
   },
   "jest": {
     "collectCoverage": true,
-    "coverageReporters": ["html"]
+    "coverageReporters": [
+      "html"
+    ]
   },
   "keywords": [],
   "author": "",
@@ -32,7 +34,9 @@
   },
   "dependencies": {
     "bootstrap": "^4.5.0",
+    "dotenv-webpack": "^5.1.0",
     "jquery": "^3.5.1",
-    "popper.js": "^1.16.1"
+    "popper.js": "^1.16.1",
+    "save-dev": "0.0.1-security"
   }
 }
