--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "build": "webpack --mode=development",
+    "build": "webpack --mode development",
     "start": "npm run build; webpack-dev-server --open --mode development",
     "lint": "eslint src/*.js",
     "test": "jest --coverage"
@@ -21,9 +21,12 @@
   "devDependencies": {
     "@babel/core": "^7.6.4",
     "@babel/plugin-transform-modules-commonjs": "^7.6.0",
+    "dotenv-webpack": "^5.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
     "eslint": "^6.3.0",
+    "file-loader": "^1.1.6",
+    "html-loader": "^0.5.5",
     "eslint-loader": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
@@ -34,9 +37,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.5.0",
-    "dotenv-webpack": "^5.1.0",
     "jquery": "^3.5.1",
-    "popper.js": "^1.16.1",
-    "save-dev": "0.0.1-security"
+    "popper.js": "^1.16.1"
   }
 }
